Update Capstone1 Machine Learning.ipynb
Improved model descriptions and corrected typos

--- a/Capstone1 Machine Learning.ipynb
+++ b/Capstone1 Machine Learning.ipynb
@@ -574,7 +574,7 @@
     "\n",
     "Pros: The algorithm is simple and it is easy to visualize the methodology.\n",
     "\n",
-    "Cons: Testing is slow because each test data point needs to be compared to all of the training data points to determine which are closest. This could make it impractical to use for real-time classification.\n"
+    "Cons: Testing is slow because each test data point needs to be compared to all of the training data points to determine which are closest. This could make it impractical to use for real-time classification. Also, the model somewhat lacks interpretability in that it does not return feature importances.\n"
    ]
   },
   {
@@ -682,7 +682,7 @@
    "metadata": {},
    "source": [
     "## 3. Random Forest\n",
-    "This algorithm uses an ensemble of decision trees. The individual trees are formed by branching on each of the features in the dataset. Each leaf is a possible outcome for the feature.  Creating an ensemble avoids the problem of overfitting that commonly occurs in individual trees.\n",
+    "This algorithm uses an ensemble of decision trees, and overcomes the overfitting problem of individual trees by introducing two types of randomness. First, each tree in the ensemble is built from a sample (the same as the original input sample size) drawn with replacement (i.e., a bootstrap sample) from the training set. Second, when splitting each node during the construction of a tree, the best split is found using a random subset of the features.  The injected randomness in forests yield decision trees with somewhat decoupled prediction errors. By taking an average of those predictions (the forest), some errors can cancel out. Random forests achieve a reduced variance by combining diverse trees, sometimes at the cost of a slight increase in bias. In practice the variance reduction is often significant hence yielding an overall better model.\n",
     "\n",
     "Pros: The concept of the algorithm is easy to grasp.\n",
     "\n",
@@ -729,7 +729,7 @@
     "\n",
     "Pros: The concept of the algorithm is easy to grasp, and boosting algorithms typically produce better results than other algorithms.\n",
     "\n",
-    "Cons: The algorithm is more complex than other models and it is difficult to visualize the process."
+    "Cons: The algorithm is sesitive to outliers and noisy data."
    ]
   },
   {
@@ -1226,7 +1226,7 @@
    "metadata": {},
    "source": [
     "#### b) XGBoost with hyperparameter tuning and cross validation\n",
-    "XGBoost exposes many parameters that can be tuned. An subset most appliccable to this dataset has been chosen as follows:\n",
+    "XGBoost exposes many parameters that can be tuned. A subset most appliccable to this dataset has been chosen as follows:\n",
     "\n",
     "n_estimators is the maximum number of weak learners to create.  The default type of weak learner is gbtree, a tree based model.\n",
     "\n",
